fix overlap between header and first msg

--- a/client/css/styles.scss
+++ b/client/css/styles.scss
@@ -81,7 +81,9 @@ aside {
       border-bottom: 1px solid #B1ABCF;
       width: 100%;
     }
-    
+    #div_messages{
+      padding-top: 100px;
+    }
     h2{
       font-size: 10px;
     }
